fixtures/vyper/simple/overflow/negative/i64-0.3.vy
#! {
#!   "modes": [
#!     "V 0.3.9",
#!     "V 0.3.10"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-9223372036854775808"
#!           ],
#!           "caller": "0x6e92Ff8d5AA198fEe1A963E4Ca26200A28B5fEE0"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int64) -> int64:
    return witness - 1
